--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img class="profile-img col-narrow" src="images/myPic.png" alt="Scott Crow">
         <div class="col-wide">
         <h1>Scott Crow</h1>
-        <h2>Computer Software</h2>
-        <p>Add your profile summary here. You can have several paragraphs or add links.</p>
+        <h2>Computer Science Student</h2>
+        <p>I am currently seeking my B.S. in Computer Science at Florida State Universtiy. </p>
         </div>
       </div>
     </header>
