--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         <div class="col-wide">
         <h1>Scott Crow</h1>
         <h2>Computer Science Student</h2>
-        <p>I am currently seeking my B.S. in Computer Science at Florida State Universtiy. </p>
+        <h4>This website is an expieriment and is under constant construction</h4>
+        <p>I am pursuing a B.S. in Computer Science at Florida State Universtiy. Coursework has included;
+           Algorithm analysis, Programming Languages, Operating Systems, Software Engineering, Theory and Structures of Database Design,
+           Expert Systems, Programming fundamentals with C++, Internet programming with Java, and Mobile development with Android Studio. to name a few.
+           I am also utilizing the Lynda.com turorials to learn FullStack web development. In these courses I am
+           I am familiar with several languages and technogies including,
+        (in order of proficiency)C++, C, Java, HTML, CSS, JavaScript, Android Studio, </p>
         </div>
       </div>
     </header>
