--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         <p>I am pursuing a B.S. in Computer Science at Florida State Universtiy. Coursework has included;
            Algorithm Analysis, Programming Languages, Operating Systems, Software Engineering, Theory and Structures of Database Design,
            Expert Systems, Programming fundamentals with C++, Internet Programming with Java, and Mobile Development with Android Studio.
-           I am also utilizing the Lynda.com turorials to learn FullStack web development. This website is my web project for that endeavor.
-           I will be using HTML, CSS and JavaScript initially and primarily, but will also throw in other technologies as I encounter them. </p>
+           I am also utilizing the Lynda.com turorials to learn FullStack web development. This website is my web project for that endeavor,
+           and will therefore be under constant construction.
+           I will be using HTML, CSS and JavaScript initially and primarily, but will add other technologies as I encounter them.</p>
+           <p>At the moment, I am seeking a full or part time position that will enable me to expand my skillset as well as strengthen
+           skills I already possess. This can be a permenant opportunity or an intern position. There is no substitute for getting your
+           hands dirty with real world expieriences.</p>
         </div>
       </div>
-      <h4>Please note: This website is an expieriment and is under constant construction</h4>
     </header>
 
     <main>
@@ -31,23 +34,43 @@
         <section class="work">
           <div class="content-wrap">
             <h2>Work Experience</h2>
-            <div class="col-narrow">
+
             <!-- Job Details: copy this whole block to add more jobs -->
+            <div class="col-narrow">
+            <h3>Nao Robot handler</h3>
+            <p>Florida State University</p>
+            <p>Jan 2017 - Present</p>
+          </div>
+          <div class="col-wide">
+            <p>I am tasked with programming and demonstrating the 2 Nao robots we have
+              at FSU. We "teach" him to communicate, dance, sing and perform other activities.
+            The main purpose of the Nao project is to spark the interest of grade school children,
+          so we travel to schools and other local events to let Wally and Sammie show off.</p>
+
+            <!-- This list can be deleted if you don't want to use it. -->
+            <p>Optional list:</p>
+            <ul>
+                <li>Create programs and abilities for the robots</li>
+                <li>Demonstrate the Robot to groups of children and adults</li>
+                <li>Research new technologies from Nao and Softbank robotics</li>
+                <li>Responsible for maintaining Wally and Sammie</li>
+            </ul>
+          </div>
+            <div class="col-narrow">
             <h3>Engineering Assistant</h3>
             <p>General Dynamics</p>
             <p>Aug 2013- Dec 2015</p>
           </div>
           <div class="col-wide">
-<p>After completion of my internship at the end of the summer of 2013, my department
-head created a permenant position for me
-so that I could complete the projects I had started.</p>
+            <p>After completion of my internship at the end of the summer of 2013, my department
+              head created a permenant position at the navy base so that I could complete the projects I had begun.</p>
 
             <!-- This list can be deleted if you don't want to use it. -->
             <p>Optional list:</p>
             <ul>
-                <li>Created...</li>
-                <li>Lead...</li>
-                <li>Responsible for</li>
+                <li>Lead the design build of B.O.A.B. (Boat On A Bench)</li>
+                <li>Attended and spoke in meetings about progress and set backs</li>
+                <li>Assisted senior engineers and programmers.</li>
             </ul>
           </div>
             <!-- end of Job Details block. -->
@@ -61,11 +84,10 @@ so that I could complete the projects I had started.</p>
             <h2>Education</h2>
 
             <!-- School details: copy this whole block to add more schools. -->
-            <h3>School name, year you attended</h3>
-            <p>Designation received</p>
+            <h3>Florida State University, 2018</h3>
 
             <!-- Add as many paragraphs as you need. -->
-            <p>Summary.</p>
+            <p>Degree: Bachelor of Science<br>Major: Computer Science<br>Minor: Mathematics</p>
             <!-- End of school details. -->
           </div>
         </section>
