--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Scott Crow</h1>
         <h2>Computer Science Student</h2>
 
-        <p>I am pursuing a B.S. in Computer Science at Florida State Universtiy. Coursework has included;
+        <p>I am currently pursuing a B.S. in Computer Science at Florida State Universtiy. Coursework has included;
            Algorithm Analysis, Programming Languages, Operating Systems, Software Engineering, Theory and Structures of Database Design,
            Expert Systems, Programming fundamentals with C++, Internet Programming with Java, and Mobile Development with Android Studio.
            I am also utilizing the Lynda.com turorials to learn FullStack web development. This website is my web project for that endeavor,
