--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            hands dirty with real world expieriences.</p>
         </div>
       </div>
-      <a href="ScottCrowResume2016FSU.pdf" class="btn" download>Download PDF<br>Version</a>
+      <a href="resume.pdf" class="btn" download>Download PDF<br>Version</a>
     </header>
 
     <main>
