added gulf coast

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script src="https://use.fontawesome.com/68e4ac2410.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crow, Scott | Resume</title>
@@ -43,7 +45,7 @@
             <h2>Work Experience</h2>
             <!-- Job Details: copy this whole block to add more jobs -->
           <div class="col-narrow">
-            <h3>Nao Robot handler</h3>
+            <h3>Nao Robot Handler</h3>
             <p class="upCase">Florida State University</p>
             <p>Jan 2017 - Present</p>
           </div>
@@ -95,6 +97,10 @@
             <!-- Add as many paragraphs as you need. -->
             <p>Degree: Bachelor of Science<br>Major: Computer Science<br>Minor: Mathematics</p>
             <!-- End of school details. -->
+            <h3>Gulf Coast State College, 2016</h3>
+            <!-- Add as many paragraphs as you need. -->
+            <p>Degree: Associate of Arts<br>Major: Engineering Track</p>
+            <!-- End of school -->
           </div>
         </section>
     </main>
@@ -106,11 +112,14 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact-info">
-            <a href="mailto:email@example.com">email@example.com</a>
-            <a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a>
-            <a href="#" target="_blank">Twitter</a>
-            <a href="#" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">Facebook</a>
+            <a href="mailto:crow1325@gmail.com">crow1325@gmail.com</a>
+            <a href="http://scottcrow.net" target="_blank">scottcrow.net</a>
+            <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+              <span class="sr-only">Twitter</span></a>
+            <a class="linkedin" href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
+              <span class="sr-only">LinkedIn</span></a>
+            <a class="facebook" href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
+              <span class="sr-only">Facebook</span></a>
         </div>
 
         <p>Copyright 2017 by Scott Crow</p>
