--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
             <!-- This list can be deleted if you don't want to use it. -->
             <p>Optional list:</p>
             <ul>
-                <li>Lead the design build of B.O.A.B. (Boat On A Bench)</li>
-                <li>Attended and spoke in meetings about progress and set backs</li>
-                <li>Assisted senior engineers and programmers.</li>
+              <li>Provide support to senior engineers, programmers and technicians</li>
+              <li>Research and acquisition of materials</li>
+	            <li>Testing of computerized electrical systems and components</li>
+              <li>Tear down and rebuild of computerized electrical components</li>
+              <li>Lead the design build of B.O.A.B. (Boat On A Bench)</li>
             </ul>
           </div>
             <!-- end of Job Details block. -->
@@ -93,7 +95,6 @@
 
             <!-- School details: copy this whole block to add more schools. -->
             <h3>Florida State University, 2018</h3>
-
             <!-- Add as many paragraphs as you need. -->
             <p>Degree: Bachelor of Science<br>Major: Computer Science<br>Minor: Mathematics</p>
             <!-- End of school details. -->
