added fsu image in back ground

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           so we travel to schools and other local events to let Wally and Sammie show off.</p>
 
             <!-- This list can be deleted if you don't want to use it. -->
-            <p>Optional list:</p>
+            <p>Duty Summary:</p>
             <ul>
                 <li>Create programs and abilities for the robots</li>
                 <li>Demonstrate the Robot to groups of children and adults</li>
@@ -74,7 +74,7 @@
               head created a permenant position at the navy base so that I could complete the projects I had begun.</p>
 
             <!-- This list can be deleted if you don't want to use it. -->
-            <p>Optional list:</p>
+            <p>Duty Summary:</p>
             <ul>
               <li>Provide support to senior engineers, programmers and technicians</li>
               <li>Research and acquisition of materials</li>
