new resume file

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
            I am also utilizing the Lynda.com turorials to learn FullStack web development. This website is my web project for that endeavor,
            and will therefore be under constant construction.
            I will be using HTML, CSS and JavaScript initially and primarily, but will add other technologies as I encounter them.</p>
-           <p>At the moment, I am seeking a full or part time position that will enable me to expand my skillset as well as strengthen
-           skills I already possess. This can be a permenant opportunity or an intern position. There is no substitute for getting your
-           hands dirty with real world expieriences.</p>
+        <p>At the moment, I am seeking a full or part time position that will enable me to expand my skillset as well as strengthen
+        skills I already possess. This can be a permenant opportunity or an intern position. There is no substitute for getting your
+        hands dirty with real world expieriences.</p>
         </div>
       </div>
       <a href="resume.pdf" class="btn" download>Download PDF<br>Version</a>
@@ -113,8 +113,10 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact-info">
-            <a href="mailto:crow1325@gmail.com">crow1325@gmail.com</a>
-            <a href="http://scottcrow.net" target="_blank">scottcrow.net</a>
+          <a href="#" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
+            <span class="sr-only">e-mail</span></a>
+            <a href="#" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>
+              <span class="sr-only">web page</span></a>
             <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
               <span class="sr-only">Twitter</span></a>
             <a class="linkedin" href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
