--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               <span class="sr-only">web page</span></a>
             <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
               <span class="sr-only">Twitter</span></a>
-            <a class="linkedin" href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
+            <a class="linkedin" href="https://www.linkedin.com/in/scott-crow-a90ba490/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
               <span class="sr-only">LinkedIn</span></a>
-            <a class="facebook" href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
+            <a class="facebook" href="https://www.facebook.com/scottcrow13" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
               <span class="sr-only">Facebook</span></a>
         </div>
 
