--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="contact-info">
           <a href="#" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
             <span class="sr-only">e-mail</span></a>
-            <a href="#" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>
+            <a href="http://www.scottcrow.net" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>
               <span class="sr-only">web page</span></a>
             <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
               <span class="sr-only">Twitter</span></a>
