--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <ul>
               <li>Provide support to senior engineers, programmers and technicians</li>
               <li>Research and acquisition of materials</li>
-	            <li>Testing of computerized electrical systems and components</li>
+	            <li>Testing of software and computerized electrical systems and components</li>
               <li>Tear down and rebuild of computerized electrical components</li>
-              <li>Lead the design build of B.O.A.B. (Boat On A Bench)</li>
+              <li>Design build of B.O.A.B. (Boat On A Bench)</li>
             </ul>
           </div>
             <!-- end of Job Details block. -->
