--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact-info">
-          <a href="#" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
+          <a href="mailto:crow1325@yahoo.com?subject=Linked from scottcrow.net &body=Hey Scott, I saw your website and..." target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
             <span class="sr-only">e-mail</span></a>
             <a href="http://www.scottcrow.net" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>
               <span class="sr-only">web page</span></a>
