--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <p>I am currently pursuing a B.S. in Computer Science at Florida State Universtiy. Coursework has included;
            Algorithm Analysis, Programming Languages, Operating Systems, Software Engineering, Theory and Structures of Database Design,
            Expert Systems, Programming fundamentals with C++, Internet Programming with Java, and Mobile Development with Android Studio.
-           I am also utilizing the Lynda.com turorials to learn FullStack web development. This website is my web project for that endeavor,
-           and will therefore be under constant construction.
-           I will be using HTML, CSS and JavaScript initially and primarily, but will add other technologies as I encounter them.</p>
+           I am also learning full stack web development. This website is my main project/expiriment for that endeavor,
+           and will therefore be under constant construction.</p>
         <p>At the moment, I am seeking a full or part time position that will enable me to expand my skillset as well as strengthen
         skills I already possess. This can be a permenant opportunity or an intern position. There is no substitute for getting your
         hands dirty with real world expieriences.</p>
