added crow enterprises

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="col-narrow">
             <h3>Nao Robot Handler</h3>
             <p class="upCase">Florida State University</p>
-            <p>Jan 2017 - Present</p>
+            <p>Jan 2017 - Aug 2017</p>
           </div>
           <div class="col-wide job-description">
             <p>I am tasked with programming and demonstrating the 2 Nao robots we have
@@ -60,7 +60,23 @@
                 <li>Create programs and abilities for the robots</li>
                 <li>Demonstrate the Robot to groups of children and adults</li>
                 <li>Research new technologies from Nao and Softbank robotics</li>
-                <li>Responsible for maintaining Wally and Sammie</li>
+                <li>Responsible for maintaining Wally and Sammie(The two robots)</li>
+            </ul>
+          </div>
+          <div class="col-narrow">
+            <h3>Owner/Operator</h3>
+            <p class="upCase">Crow Enterprises</p>
+            <p>Oct 2011 - May 2013 and Dec 2015 - Present</p>
+          </div>
+          <div class="col-wide job-description">
+            <p>I own a small resoration and remodeling company specializing in fire and water damage.</p>
+            <p>Duty Summary:</p>
+            <ul>
+                <li>Day to day operations including scheduling, bookkeeping and marketing</li>
+                <li>Electrical, audio/visual, plumbing</li>
+                <li>Drywall, paint</li>
+                <li>Flooring to include tile, composite and hardwoods</li>
+                <li>Framing, concrete, roofing and siding.</li>
             </ul>
           </div>
             <div class="col-narrow">
