--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>Oct 2011 - May 2013 and Dec 2015 - Present</p>
           </div>
           <div class="col-wide job-description">
-            <p>I own a small resoration and remodeling company specializing in fire and water damage.</p>
+            <p>I own a small restoration and remodeling company specializing in fire and water damage.</p>
             <p>Duty Summary:</p>
             <ul>
                 <li>Day to day operations including scheduling, bookkeeping and marketing</li>
@@ -85,8 +85,8 @@
             <p>Aug 2013- Dec 2015</p>
           </div>
           <div class="col-wide job-description">
-            <p>After completion of my internship at the end of the summer of 2013, my department
-              head created a permenant position at the navy base so that I could complete the projects I had begun.</p>
+            <p>After completion of my internship at the end of the summer of 2014, my department
+              head created a permenant position at the navy base so that I could complete the projects I had started.</p>
 
             <!-- This list can be deleted if you don't want to use it. -->
             <p>Duty Summary:</p>
