updated resume.pdf and duties in html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="work" id="work">
           <div class="content-wrap">
             <h2>Work Experience</h2>
-            <!-- Job Details: copy this whole block to add more jobs -->
+            <!-- Job Details: -->
           <div class="col-narrow">
             <h3>Nao Robot Handler</h3>
             <p class="upCase">Florida State University</p>
@@ -53,14 +53,12 @@
               at FSU. We "teach" him to communicate, dance, sing and perform other activities.
             The main purpose of the Nao project is to spark the interest of grade school children,
           so we travel to schools and other local events to let Wally and Sammie show off.</p>
-
-            <!-- This list can be deleted if you don't want to use it. -->
             <p>Duty Summary:</p>
             <ul>
-                <li>Create programs and abilities for the robots</li>
+                <li>Program 2 robot mascots to perform entertaining tasks such as dance, sing or play soccer</li>
                 <li>Demonstrate the Robot to groups of children and adults</li>
                 <li>Research new technologies from Nao and Softbank robotics</li>
-                <li>Responsible for maintaining Wally and Sammie(The two robots)</li>
+                <li>Responsiblity for maintaining Wally and Sammie(The two robots)</li>
             </ul>
           </div>
           <div class="col-narrow">
@@ -88,33 +86,40 @@
             <p>After completion of my internship at the end of the summer of 2014, my department
               head created a permenant position at the navy base so that I could complete the projects I had started.</p>
 
-            <!-- This list can be deleted if you don't want to use it. -->
             <p>Duty Summary:</p>
             <ul>
               <li>Provide support to senior engineers, programmers and technicians</li>
-              <li>Research and acquisition of materials</li>
-	            <li>Testing of software and computerized electrical systems and components</li>
-              <li>Tear down and rebuild of computerized electrical components</li>
-              <li>Design build of B.O.A.B. (Boat On A Bench)</li>
+              <li>Resolved engineering problems by collecting and analyzing troubleshooting data</li>
+	          <li>Designed a “Dry Boat” in a rack to be used as a testing environment for software and hardware</li>
+              <li>Verify specifications by conducting tests and inspections, and by building/analyzing models and simulations</li>
+              <li>Contribute information and data to team meetings and discussions</li>
             </ul>
           </div>
+		  <div class="col-narrow">
+            <h3>Engineering Intern</h3>
+            <p class="upCase">Naval Research Enterprise Intern Program (NREIP)</p>
+            <p>Summer 2014 and Summer of 2015</p>
+          </div>
+          <div class="col-wide job-description">
+            <p>NREIP Internship providing assistance to engineers and programmers. My purpose was to help them 
+				with their day to day projects. This included designing and testing electrical components using various equipment
+				and software. Attended weekly meetings and would stand in if my mentor was unavailable or out of town. 
+				</p>
+          </div>  
             <!-- end of Job Details block. -->
           </div>
         </section>
-
-
+		
         <!-- // Education -->
         <section class="education" id="education">
-          <div class="content-wrap">
+       		<div class="content-wrap">
             <h2>Education</h2>
 
-            <!-- School details: copy this whole block to add more schools. -->
+            <!-- School details:-->
             <h3>Florida State University, 2018</h3>
-            <!-- Add as many paragraphs as you need. -->
             <p>Degree: Bachelor of Science<br>Major: Computer Science<br>Minor: Mathematics</p>
             <!-- End of school details. -->
             <h3>Gulf Coast State College, 2016</h3>
-            <!-- Add as many paragraphs as you need. -->
             <p>Degree: Associate of Arts<br>Major: Engineering Track</p>
             <!-- End of school -->
           </div>
@@ -126,7 +131,7 @@
       <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
-        <!-- Social media and contact links. Add or remove any networks. -->
+        <!-- Social media and contact links. -->
         <div class="contact-info">
           <a href="mailto:crow1325@yahoo.com?subject=Linked from scottcrow.net &body=Hey Scott, I saw your website and..." target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
             <span class="sr-only">e-mail</span></a>
