--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Scott Crow</h1>
         <h2>Computer Science Student</h2>
 
-        <p>I am currently pursuing a B.S. in Computer Science at Florida State Universtiy. Coursework has included;
+        <p>I am currently pursuing a B.S. in Computer Science at Florida State Universtiy and have 2 classes remaining. Coursework has included;
            Algorithm Analysis, Programming Languages, Operating Systems, Software Engineering, Theory and Structures of Database Design,
            Expert Systems, Programming fundamentals with C++, Internet Programming with Java, and Mobile Development with Android Studio.
            I am also familiar with full stack web development using HTML, CSS, JavaScript, Apache, PHP and MySQL. 
