--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
         <img class="profile-img col-narrow" src="images/myPic.png" alt="Scott Crow">
         <div class="col-wide">
         <h1>Scott Crow</h1>
-        <h2>Computer Science Student</h2>
+        <h2>Computer Science Professional</h2>
 
-        <p>I am currently pursuing a B.S. in Computer Science at Florida State Universtiy and will graduate in May 2018. Coursework has included;
+        <p>I am nearing the end of my B.S. in Computer Science at Florida State Universtiy and will graduate in May 2018. Coursework has included;
            Algorithm Analysis, Programming Languages, Operating Systems, Software Engineering, Theory and Structures of Database Design,
-           Expert Systems, Programming fundamentals with C++, Internet Programming with Java, and Mobile Development with Android Studio.
-           I am also familiar with front-end web development using HTML, CSS, JavaScript. 
+           Expert Systems, Programming fundamentals with C++, Internet Programming with Java, and Mobile Development with Android Studio. 
            </p>
         </div>
       </div>
